Create map without loading image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Kirby-style-game</title>
   </head>
   <body>
+    <div id="container">
+      <canvas id="game"></canvas>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
